# opstool

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  desktop.ini  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: macos-test.yml
dist_old/: opstool-0.0.7-py3-none-any.whl  opstool-0.2.0-py3-none-any.whl  opstool-0.3.0-py3-none-any.whl  opstool-0.4.0-py3-none-any.whl  opstool-0.4.1-py3-none-any.whl  opstool-0.5.0-py3-none-any.whl  opstool-0.6.0-py3-none-any.whl  opstool-0.7.0-py3-none-any.whl  opstool-0.7.2-py3-none-any.whl  opstool-0.8.0-py3-none-any.whl  opstool-0.8.1-py3-none-any.whl  opstool-0.8.2-py3-none-any.whl  opstool-0.8.3-py3-none-any.whl  opstool-0.8.4-py3-none-any.whl  opstool-0.8.6-py3-none-any.whl
doc/source/: CHANGELOG.rst  Installation.rst  _Installation.rst  _analysis.rst  _pre.rst  _sec_mesh.rst  _vis.rst  conf.py  fiber_sec_mesh.rst  index.rst  modules.rst  opstool.rst  opstool.vis.rst  requirements_docs.txt  usr_guide.rst
doc/source/_templates/: sidebar_index.html
doc/source/src/: _ana_mom_curv.rst  _ana_smart_analysis.rst  _pre_tcl2py.rst  _pre_unit.rst  _vis_mod_vis.rst  demos.rst  installation.rst  mod_pre.rst  mod_secmesh.rst  mod_vis.rst  mod_vis2.rst  opstool.rst  opstool_api.rst  (+3 more)
docs/: .gitignore  conf.py  index.rst  installation.rst  known_issues.rst  quick_start.rst  requirements.txt
docs/examples/: index.ipynb
opstool/: __init__.py
opstool/anlys/: __init__.py  _sec_analysis.py  _smart_analyze.py
opstool/post/: __init__.py  _get_model_data_base.py  _unit_postprocess.py  eigen_data.py  model_data.py  responses_data.py
opstool/pre/: __init__.py  _load.py  _model_data.py  _model_mass.py  _read_gmsh.py  _unit_system.py  pre_utils.py  tcl2py.py
opstool/utils/: __init__.py  _load_ops_examples.py  _util_funcs.py  consts.py  opensees.pyi  ops_ele_class_tags.py
opstool/vis/: __init__.py
src/: .gitignore
src/opstool/: EleClassTags.py  __init__.py  opensees.pyi  utils.py
src/opstool.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: DefoVis.html  EigenAnimation.html  EigenVis.html  FrameRespVis.html  ModelData.tex  ModelVis.html  ReactionVis.html  SecMesh.html  modd.html  model.tex  mysec.py  mysec.tcl  test_dambreak.py  test_fiber_sec_vis.py  test_gm.ipynb  test_model_vis.py  test_sec_analysis.py  test_sec_mesh.py  test_temp.py  test_vis_pyvista.py  vvvvvvv.html
tests/opstool_output/: BeamRespStepData-1.bak  BeamRespStepData-1.dir  BeamRespStepData-1.hdf5  EigenData.bak  EigenData.dir  EigenData.hdf5  FiberData.dir  FiberData.hdf5  FiberRespStepData-1.dir  ModelData.bak  ModelData.dir  ModelData.hdf5  NodeRespStepData-1.bak  NodeRespStepData-1.dir  NodeRespStepData-1.hdf5  RespStepData-1.hdf5
(+336 files in other folders)
