[tool.poetry]
name = "opstool"
version = "1.0.10"
description = "opstool: A Python package for structural analysis and visualization using OpenSeesPy"
authors = ["Yexiang Yan <yexiang_yan@outlook.com>"]
repository = "https://github.com/yexiang1992/opstool"
documentation = "https://opstool.readthedocs.io/en/latest/index.html"
readme = "README.md"
packages = [
  {include = "opstool"}
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
matplotlib = ">=3.9.2"
numpy = ">=1.26.4"
scipy = ">=1.14.1"
pyvista = ">=0.44.1"
plotly = ">=5.24.1"
pandas = ">=2.2.3"
xarray = ">=2024.10.0"
imageio = {extras = ["ffmpeg"], version = ">=2.36.1"}
sectionproperties = ">=3.4.0"
shapely = ">=2.0.6"
rich = ">=13.9.2"
triangle = ">=20230923"
gmsh = ">=4.13.1"
netcdf4 = ">=1.7.1.post2"
trame = ">=3.7.0"
ipywidgets = ">=8.1.5"
trame-vtk = ">=2.8.12"
trame-vuetify = ">=2.7.2"
trame-components = ">=2.4.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
deptry = "^0.16.2"
mypy = "^1.5.1"
pre-commit = "^3.4.0"
tox = "^4.11.1"
jupyter = "^1.1.1"
sphinx-autoapi = "^3.3.3"
sphinx-rtd-theme = "^3.0.1"
sphinx = "^8.1.3"
sphinx-autobuild = "^2024.10.3"
recommonmark = "^0.7.1"
sphinx-markdown-tables = "^0.0.17"
sphinx_design = "^0.6.1"
sphinx-copybutton = "^0.5.2"
nbsphinx = "^0.9.5"
jupyter-sphinx = "^0.5.3"
furo = "^2024.8.6"
sphinx-autodoc-typehints = "^2.5.0"
pandoc = "^2.4"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^9.2.7"
mkdocstrings = {extras = ["python"], version = "^0.26.1"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# [tool.mypy]
# files = ["opstool"]
# disallow_untyped_defs = "True"
# disallow_any_unimported = "True"
# no_implicit_optional = "True"
# check_untyped_defs = "True"
# warn_return_any = "True"
# warn_unused_ignores = "True"
# show_error_codes = "True"



[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 120
fix = true
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["opstool"]


[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
